--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
+    "baseUrl": ".",
+    "paths": {
+        "@/*": ["./src/*"]
+    },
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -21,6 +25,8 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "src",
+    "./src/**/*.ts",
+    "./src/**/*.tsx"
   ]
 }
