--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.98",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@validide/resizable-table-columns": "^2.1.0",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "rc-slider": "^10.6.2",
