--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "rc-slider": "^10.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-input-range": "^1.3.0",
     "react-input-slider": "^6.0.1",
     "react-redux": "^9.1.2",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-split": "^2.0.14",
+    "react-split-pane": "^0.1.92",
+    "resizable-panes-react": "^6.0.24",
+    "split-pane-react": "^0.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
