--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.5.1",
     "rc-slider": "^10.6.2",
     "react": "^18.3.1",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-input-range": "^1.3.0",
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-datepicker": "^6.2.0",
     "ajv": "^7.2.4",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1",
