--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.3.0",
     "@validide/resizable-table-columns": "^2.1.0",
     "axios": "^1.7.2",
+    "bem-cn": "^3.0.1",
     "classnames": "^2.5.1",
     "rc-slider": "^10.6.2",
     "react": "^18.3.1",
@@ -27,6 +28,7 @@
     "react-split": "^2.0.14",
     "react-split-pane": "^0.1.92",
     "resizable-panes-react": "^6.0.24",
+    "sort-multidimensional-array-func": "^1.0.1",
     "split-pane-react": "^0.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
