--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/react-dom": "^18.3.0",
     "@validide/resizable-table-columns": "^2.1.0",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "rc-slider": "^10.6.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-input-range": "^1.3.0",
     "react-input-slider": "^6.0.1",
