--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@validide/resizable-table-columns": "^2.1.0",
-    "axios": "^1.7.2",
-    "bem-cn": "^3.0.1",
     "classnames": "^2.5.1",
     "rc-slider": "^10.6.2",
     "react": "^18.3.1",
@@ -23,14 +21,11 @@
     "react-input-range": "^1.3.0",
     "react-input-slider": "^6.0.1",
     "react-redux": "^9.1.2",
+    "react-resizable-panels": "^2.0.19",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "react-split": "^2.0.14",
-    "react-split-pane": "^0.1.92",
-    "resizable-panes-react": "^6.0.24",
     "sort-multidimensional-array-func": "^1.0.1",
-    "split-pane-react": "^0.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
