--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0-next-2023106221355",
+    "@dnd-kit/sortable": "^8.0.0-next-2023106221355",
+    "@dnd-kit/utilities": "^3.2.2-next-2023106221355",
     "@reduxjs/toolkit": "^2.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
