--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@validide/resizable-table-columns": "^2.1.0",
+    "async-mutex": "^0.5.0",
     "classnames": "^2.5.1",
     "rc-slider": "^10.6.2",
     "react": "^18.3.1",
